# mpd_frontend

./: .directory  .gitignore  .gitmodules  LICENSE  Pipfile  README.md  com.github.skorodenko.soloviy.pypi-deps.yaml  pyproject.toml  requirements.txt  setings.default.toml  settings.default.toml
scripts/: compile_proto.sh  compile_ui.sh
soloviy/: __init__.py  config.py  constants.py  db.py  logger.py  main.py  resources.qrc  resources_rc.py
soloviy.old/: __init__.py
soloviy.old/models/: playlist_model.py
soloviy.old/ui/: ui_main.py
soloviy.old/ui/templates/: main.ui
soloviy.old/utils/: mpd_connector.py  playlist_tiler.py
soloviy.old/widgets/: main.py  playlist_tile.py  ptiling_widget.py
soloviy/api/: library.py  mpd_connector.py  tiling.py
soloviy/backend/: __init__.py  api.proto  constants.py  db.py  exceptions.py  main.py  models.py  tiling.py  utils.py
soloviy/backend/api/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
soloviy/backend/models/: db.py  pydantic.py
soloviy/backend/mpd/: client.py  native_server.py
soloviy/backend/protobufs/: mpd.proto  tiling.proto  tmpd.proto
soloviy/backend/services/: library.py  mpd.py  tiling.py
soloviy/backend/tmpd/: __init__.py  db.py  library.py  models.py
soloviy/frontend/: main.py  qmodels.py  resources.qrc  resources_rc.py
soloviy/frontend/contollers/: root.py
soloviy/frontend/qml/: MediaFlowControl.qml  MediaInfo.qml  MediaSeeker.qml  PagePlayer.qml  Root.qml
soloviy/frontend/resources/: icons.qrc
soloviy/frontend/ui/: ui_init_wizard.py  ui_main_window.py  ui_playlist_tile.py  ui_settings.py
soloviy/frontend/widgets/: init_wizard.py  main_window.py  playlist_tile.py  ptiling_widget.py  settings.py
soloviy/models/: dbmodels.py  playlist_qmodel.py  playlists_model.py  playlists_qmodel.py  pydanticmodels.py  qmodels.py  qtmodels.py
soloviy/resources/templates/: initial_config.ui  main.ui  mpd_socket_config.ui  playlist_tile.ui
soloviy/ui/: icons_rc.py  ui_init_wizard.py  ui_main.py  ui_main_window.py  ui_mpd_socket_config.py  ui_playlist_tile.py
soloviy/ui/custom_classes/: jump_slider.py
soloviy/utils/: mpd_connector.py  playlist_tiler.py  time_utils.py
soloviy/widgets/: init_main.py  init_wizard.py  main.py  main_window.py  mpd_socket_config.py  playlist_tile.py  playlists_model.py  ptiling_widget.py  settings.py  ui_main.py  ui_mpd_socket_config.py  ui_playlist_tile.py
soloviy/windows/: main.py  mpd_socket_config.py  playlist_tile.py
src/: __init__.py  app.py  config.py  const.py  logger.py  main.py  tmpd.py
src/_backend/: _mpd.py  _tiling.py
src/backend/: __init__.py  _tiling.py  models.py  mpd.py  run.py
src/frontend/: resources_rc.py
src/models/: db.py  pyd.py  qt.py
src/service/: _mpd.py  _tiling.py  run.py
src/ui/: models.py  resources.qrc  resources_rc.py
tests/: data.py  test_backend.py  test_mpd_service.py  test_tmpd.py  test_tmpd_service.py
(+43 files in other folders)
