[tool.poetry]
name = "soloviy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-mpd2 = "^3.1.0"
pyqtconfig = "^0.9.2"
qtinter = "^0.11.0"
pillow = "^9.5.0"
aiocache = "^0.12.1"
pandas = "^2.0.3"
pyyaml = "^6.0"
xdg = "^6.0.0"
attrs = "^23.1.0"
pyqt6 = "^6.5.1"


[tool.poetry.group.dev.dependencies]
req2flatpak = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
