[tool.poetry]
name = "soloviy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-mpd2 = "^3.1.0"
pillow = "^9.5.0"
pyyaml = "^6.0"
xdg = "^6.0.0"
attrs = "^23.1.0"
qtinter = "^0.11.0"
pyside6 = "^6.5.2"
dynaconf = "^3.2.2"
cashews = "^6.2.0"
diskcache = "^5.6.3"
peewee = "^3.16.3"
tinydb = "^4.8.0"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
req2flatpak = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
