[tool.poetry]
name = "soloviy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-mpd2 = "^3.1.0"
pillow = "^9.5.0"
pyyaml = "^6.0"
xdg = "^6.0.0"
attrs = "^23.1.0"
qtinter = "^0.11.0"
dynaconf = "^3.2.2"
cashews = "^6.2.0"
diskcache = "^5.6.3"
peewee = "^3.16.3"
rocksdict = "^0.3.13"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
req2flatpak = "^0.2.0"
poethepoet = "^0.24.4"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"


[tool.poe.tasks.test]
cmd = "python -m pytest -v tests/"
help = "Run tests"


[tool.poe.tasks.format]
cmd = "ruff format ."
help = "Apply ruff formatting to source code"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
